# FreeCAD_SpreadsheetAliasManager

./: CMakeLists.txt  Init.py  InitGui.py  README.md  SpreadsheetAliasManager.dox  SpreadsheetAliasManagerGui.py
Resources/: SpreadsheetAliasManager.qrc
